added repostory implementation to check if findBooks method is working