@@ -3,7 +3,6 @@ package com.commerzbank.library.book;
 import com.commerzbank.library.model.Book;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class BookService {
     private final BookRepository bookRepository;
@@ -14,6 +13,6 @@ public class BookService {
     public List<Book> findBooks(SearchCriteria searchCriteria) {
       return   bookRepository.getAll().stream()
                 .filter(book -> book.getAuthor().contains(searchCriteria.getAuthor()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
